--- a/mammo_masses_project.ipynb
+++ b/mammo_masses_project.ipynb
@@ -78,12 +78,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "2gufCZPcj1Ch"
+      },
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
         "id": "HHgTQ1oMenxX",
-        "outputId": "7a2ea270-3355-4192-fb68-d48d0a756cfa"
+        "outputId": "aa9f2cd6-d82f-48cf-c391-1a467c69805b"
       },
       "source": [
         "import pandas as pd\n",
@@ -91,7 +103,7 @@
         "masses_data = pd.read_csv('mammographic_masses.data.txt')\n",
         "masses_data.head()"
       ],
-      "execution_count": 1,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +195,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 28
         }
       ]
     },
@@ -204,13 +216,13 @@
           "height": 204
         },
         "id": "m2TsQprPenxp",
-        "outputId": "f4a587cc-762a-40dd-a117-61913e486871"
+        "outputId": "bdfc6ee5-5f0e-47f8-d4d0-1630bdd20f16"
       },
       "source": [
         "masses_data = pd.read_csv('mammographic_masses.data.txt', na_values=['?'], names = ['BI-RADS', 'age', 'shape', 'margin', 'density', 'severity'])\n",
         "masses_data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +314,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 29
         }
       ]
     },
@@ -323,12 +335,12 @@
           "height": 297
         },
         "id": "WvKDX4Xsenx2",
-        "outputId": "239cc853-9c2d-4ab8-88b4-0f5f5218ed9c"
+        "outputId": "25a3429a-7402-4adb-c6ff-818b94c5116a"
       },
       "source": [
         "masses_data.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +462,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 30
         }
       ]
     },
@@ -471,7 +483,7 @@
           "height": 419
         },
         "id": "1JWLPTV1enyM",
-        "outputId": "51df86cb-aed5-4eba-adcb-d52d47f27c85"
+        "outputId": "fc7b715b-2e6e-4d01-a1e3-425b6377e64c"
       },
       "source": [
         "masses_data.loc[(masses_data['age'].isnull()) |\n",
@@ -479,7 +491,7 @@
         "              (masses_data['margin'].isnull()) |\n",
         "              (masses_data['density'].isnull())]"
       ],
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 31
         }
       ]
     },
@@ -655,13 +667,13 @@
           "height": 297
         },
         "id": "uJSHpFmMenyW",
-        "outputId": "7f2f3058-92d6-459a-8d81-469fab8c82e9"
+        "outputId": "90217b13-6803-4370-9caa-9c194b10c579"
       },
       "source": [
         "masses_data.dropna(inplace=True)\n",
         "masses_data.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +795,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 32
         }
       ]
     },
@@ -804,7 +816,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "78W9Zah4enyd",
-        "outputId": "902545d8-d667-490e-f3f0-f37336301e83"
+        "outputId": "626238b7-902c-45f1-eb07-e4f852633626"
       },
       "source": [
         "all_features = masses_data[['age', 'shape',\n",
@@ -817,7 +829,7 @@
         "\n",
         "all_features"
       ],
-      "execution_count": 6,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,7 +845,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 33
         }
       ]
     },
@@ -853,7 +865,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oNUZUMs6enyl",
-        "outputId": "5315d91e-ef35-4237-a680-0e3f28a8ec5f"
+        "outputId": "26f190e5-48de-43be-e0db-558cb9ee697e"
       },
       "source": [
         "from sklearn import preprocessing\n",
@@ -862,7 +874,7 @@
         "all_features_scaled = scaler.fit_transform(all_features)\n",
         "all_features_scaled"
       ],
-      "execution_count": 7,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,7 +890,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 34
         }
       ]
     },
@@ -909,7 +921,7 @@
         " training_classes,\n",
         " testing_classes) = train_test_split(all_features_scaled, all_classes, train_size=0.75, random_state=1)"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -928,7 +940,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CxL_plCdenyz",
-        "outputId": "f9c89f2b-0661-48c9-f1c3-1d00c774eac6"
+        "outputId": "26333be3-d5fb-48dc-f480-82bc98776a7f"
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -938,7 +950,7 @@
         "# Train the classifier on the training set\n",
         "clf.fit(training_inputs, training_classes)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +965,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 36
         }
       ]
     },
@@ -971,10 +983,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 377
+          "height": 323
         },
         "id": "lC9TcxK3eny7",
-        "outputId": "108e00bb-eee2-4db0-a493-48b93fe41df6"
+        "outputId": "c5ae5db9-02cf-433b-a68f-af5c09e79c1f"
       },
       "source": [
         "from IPython.display import Image  \n",
@@ -988,16 +1000,8 @@
         "graph = graph_from_dot_data(dot_data.getvalue())  \n",
         "Image(graph.create_png())  "
       ],
-      "execution_count": 10,
+      "execution_count": 37,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/externals/six.py:31: FutureWarning: The module is deprecated in version 0.21 and will be removed in version 0.23 since we've dropped support for Python 2.7. Please rely on the official version of six (https://pypi.org/project/six/).\n",
-            "  \"(https://pypi.org/project/six/).\", FutureWarning)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1007,7 +1011,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 37
         }
       ]
     },
@@ -1027,12 +1031,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7s_xf4EdenzA",
-        "outputId": "b07a1e78-1ab8-4de8-e653-344a032908cd"
+        "outputId": "7b205f9f-3abb-4f3b-be8c-280e600f9475"
       },
       "source": [
         "clf.score(testing_inputs, testing_classes)"
       ],
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1042,7 +1046,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 38
         }
       ]
     },
@@ -1062,7 +1066,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zE2pAjUenzH",
-        "outputId": "0cf6ccf8-adc4-42bf-ec44-f0d4d37e6e69"
+        "outputId": "b187e288-0202-4423-dc93-ea19c6761bbc"
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -1073,7 +1077,7 @@
         "\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 12,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1087,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 39
         }
       ]
     },
@@ -1103,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q2N4gqREenzJ",
-        "outputId": "7a26d4ed-a42b-4e4a-a92d-970059220f84"
+        "outputId": "41e9acfe-4aa2-4163-a701-cbdb567c51f3"
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1113,7 +1117,7 @@
         "\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 13,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1127,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 40
         }
       ]
     },
@@ -1149,7 +1153,7 @@
         "C = 1.0\n",
         "svc = svm.SVC(kernel='linear', C=C)"
       ],
-      "execution_count": 14,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1159,14 +1163,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "73H9sBkPenzQ",
-        "outputId": "07cbb216-3578-43c2-a463-3dc38d3979e0"
+        "outputId": "520e8c9f-161a-406a-a90c-1be19a962102"
       },
       "source": [
         "cv_scores = cross_val_score(svc, all_features_scaled, all_classes, cv=10)\n",
         "\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 15,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 42
         }
       ]
     },
@@ -1197,7 +1201,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKJPJ_UEenzV",
-        "outputId": "5d20bd54-ccf2-4638-bab5-2224eff7b8a5"
+        "outputId": "51f32878-b5a1-4e7a-ff71-4c9959690f5a"
       },
       "source": [
         "from sklearn import neighbors\n",
@@ -1207,7 +1211,7 @@
         "\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 16,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1217,7 +1221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 43
         }
       ]
     },
@@ -1237,7 +1241,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUii3rsvenzY",
-        "outputId": "c309e1c7-552b-4b52-8d77-d52d86a51ea0"
+        "outputId": "c734b8c4-f6f2-4e65-e58b-80b50173fc00"
       },
       "source": [
         "for n in range(1, 50):\n",
@@ -1245,7 +1249,7 @@
         "    cv_scores = cross_val_score(clf, all_features_scaled, all_classes, cv=10)\n",
         "    print (n, cv_scores.mean())"
       ],
-      "execution_count": 17,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1324,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "th-EjJhfenzd",
-        "outputId": "caa80956-d8ad-432e-8c4b-49d7d6816b4d"
+        "outputId": "324209d8-31bd-4781-c661-b15abacb61d8"
       },
       "source": [
         "from sklearn.naive_bayes import MultinomialNB\n",
@@ -1333,7 +1337,7 @@
         "\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 18,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1343,7 +1347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 45
         }
       ]
     },
@@ -1365,7 +1369,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eRlz6S9kenzg",
-        "outputId": "3126da52-0270-407e-e074-09e8c85440bf"
+        "outputId": "2e606e68-c21b-4bc0-de97-cb50bfbdc442"
       },
       "source": [
         "C = 1.0\n",
@@ -1373,7 +1377,7 @@
         "cv_scores = cross_val_score(svc, all_features_scaled, all_classes, cv=10)\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 19,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1383,7 +1387,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 46
         }
       ]
     },
@@ -1394,7 +1398,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YY8AFqxLenzj",
-        "outputId": "34a7db01-d3cc-4527-e448-30c1790d91c0"
+        "outputId": "879fa033-10e9-4f73-aba7-70292d831a7b"
       },
       "source": [
         "C = 1.0\n",
@@ -1402,7 +1406,7 @@
         "cv_scores = cross_val_score(svc, all_features_scaled, all_classes, cv=10)\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 20,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1412,7 +1416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 47
         }
       ]
     },
@@ -1423,7 +1427,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8w-jXKgenzm",
-        "outputId": "e0902d0e-132d-4106-95a8-08121a3ac4b8"
+        "outputId": "725b16ee-0ddb-45c0-8d4b-da3f7c6e5175"
       },
       "source": [
         "C = 1.0\n",
@@ -1431,7 +1435,7 @@
         "cv_scores = cross_val_score(svc, all_features_scaled, all_classes, cv=10)\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 21,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,7 +1445,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 48
         }
       ]
     },
@@ -1463,7 +1467,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XqR55jdyenzp",
-        "outputId": "e9f53563-6037-4d3d-c021-2765bfd9ea89"
+        "outputId": "22ec5a41-5e62-457d-cbeb-b4d1ec508d65"
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -1472,7 +1476,7 @@
         "cv_scores = cross_val_score(clf, all_features_scaled, all_classes, cv=10)\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1482,7 +1486,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -1518,7 +1522,7 @@
         "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "    return model"
       ],
-      "execution_count": 23,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1528,7 +1532,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V7ZR0kipenzv",
-        "outputId": "b841b6fc-dbef-4105-90b8-c351672dafb1"
+        "outputId": "9cb482f4-2363-45e1-bcb3-791a7b912f08"
       },
       "source": [
         "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
@@ -1539,33 +1543,17 @@
         "cv_scores = cross_val_score(estimator, all_features_scaled, all_classes, cv=10)\n",
         "cv_scores.mean()\n"
       ],
-      "execution_count": 24,
+      "execution_count": 51,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: DeprecationWarning: KerasClassifier is deprecated, use Sci-Keras (https://github.com/adriangb/scikeras) instead.\n",
-            "  after removing the cwd from sys.path.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "WARNING:tensorflow:5 out of the last 13 calls to <function Model.make_test_function.<locals>.test_function at 0x7f2a93080560> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-            "WARNING:tensorflow:5 out of the last 13 calls to <function Model.make_test_function.<locals>.test_function at 0x7f2a92e81440> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8024096369743348"
+              "0.7987951815128327"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 51
         }
       ]
     },
